--- a/style.css
+++ b/style.css
@@ -1,7 +1,60 @@
 html, body {
+  padding: 0 0;
+  margin: 0 0;
   height: 100%;
   width: 100%;
+  background-color: #f7f7f7;
+  font-family: Nunito,sans-serif;
 }
+
+#bar-div{
+  display: flex;
+  justify-content:space-between;
+  align-items: center;
+  background-color: rgb(0, 0, 0);
+}
+#bar-title{
+  margin: 1% 1.5%;
+  color: white;
+}
+#bar-button{
+  margin: 1% 1.5%;
+}
+
+#profile-div{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  row-gap: -1rem;
+}
+.profile-element{
+  width: 100%;
+}
+#banner-img{
+  min-height: 150px;
+  max-height: 300px;
+}
+#profile-img{
+  max-width:150px;
+  min-width: 100px;
+  max-height: 150px;
+  min-height: 100px;
+  border-radius: 100%;
+  padding: 0 0;
+  margin: 0 0;
+  position: relative;
+  top: -70px;
+}
+#profile-name{
+  text-align: center;
+  padding: 0 5%;
+  margin: 0 30%;
+  position: relative;
+  top: -60px;
+  font-size: 26px;
+}
+
 
 #formulario{
   display: flex;
@@ -33,6 +86,35 @@ html, body {
 }
 
 #coleccion-table{
-  width: 80%;
+  width: 100%;
+  margin: 5%;
 }
+#coleccion-title{
+  width: 100%;
+}
+
+.content-div{
+  display: block;
+  background-color: rgb(255, 255, 255);
+  padding: 20px;
+  margin: 10px;
+  border-radius: 15px;
+  box-shadow: 5px 5px 10px rgb(0 0 0 / 20%);
+  -webkit-appearance: none;
+  
+}
+
+
+table{
+  width:100%;
+}
+.table-header{
+  background-color: rgba(255,255,255,0.3);
+ }
+.table-content{
+  overflow-x:auto;
+  margin-top: 0px;
+  border: 1px solid rgba(255,255,255,0.3);
+}
+
 
