--- a/style.css
+++ b/style.css
@@ -3,12 +3,16 @@ html, body {
   margin: 0 0;
   height: 100%;
   width: 100%;
-  background-color: #f7f7f7;
+  background-color: #e4e4e4;
   font-family: Nunito,sans-serif;
  align-items: center;
 }
 
 p{
+  text-align: justify;
+}
+span{
+  display: block;
   text-align: justify;
 }
 
@@ -61,6 +65,20 @@ p{
   font-size: 26px;
 }
 
+#select-pais-div{
+  display: flex;
+  flex-wrap: wrap;
+  /*justify-content: space-between;*/
+}
+#pais-select-title{
+  display: block;
+  justify-self: auto;
+}
+#pais-select{
+  display: block;
+  justify-self: auto;
+}
+
 
 #formulario{
   display: flex;
@@ -82,6 +100,30 @@ p{
   width: 40%;
 }
 
+button {
+  background: #7ec780; /* Green */
+  border: none;
+  color: rgb(0, 0, 0);
+  padding: 8px 20px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.text-input{
+  width: 100%;
+  border-radius: 6px;
+  background-color: #fff;
+  border: 1px solid #c4c4c4;
+  font-size: 16px;
+  padding: 10px 16px;
+  box-sizing: border-box;
+  margin-bottom: 0px;
+  margin-top: 5px;
+  color: #000;
+  font-weight: 300;
+}
 
 #coleccion-table-div{
   display: flex;
@@ -90,8 +132,13 @@ p{
   row-gap: 0.5rem;
   column-gap: 0.5rem;
 }
-
+#coleccion-img{
+  display: block;
+  border-radius: 15px;
+  width: 90%;
+}
 #coleccion-table{
+  display: block;
   width: 100%;
   margin: 5%;
 }
@@ -106,32 +153,13 @@ p{
   
 }
 
-table{
-  width:100%;
-}
-.table-header{
-  background-color: rgba(255,255,255,0.3);
- }
-.table-content{
-  overflow-x:auto;
-  margin-top: 0px;
-  border: 1px solid rgba(255,255,255,0.3);
-}
-
-button {
-  background: #7ec780; /* Green */
-  border: none;
-  color: rgb(0, 0, 0);
-  padding: 8px 20px;
-  text-align: center;
-  text-decoration: none;
-  font-size: 16px;
-  cursor: pointer;
-}
-
 .section-title{
   font-size: 20px;
   width: 100%;
+}
+.section-subtitle{
+  font-size: 16px;
+  width: 100%
 }
 
 .img-icon{
@@ -152,13 +180,15 @@ button {
 #content-div{
   display: grid;
   max-width: 1000px;
+  padding: 0px 10px;
   margin: auto;
   row-gap: 0.5rem;
   column-gap: 0.5rem;
   grid-template-areas: 
   "a a b"
   "c c b"
-  "d d b";
+  "d d b"
+  "e e b";
   grid-template-columns: 35% 35% 30%;
   /*align-items: center;*/
   /*justify-content: center;*/
@@ -168,14 +198,23 @@ button {
   margin-bottom: 50px;
 }
 
+
 #resumen-div{
   grid-area: a;
 }
 #lenguajes-list-div{
   grid-area: c;
 }
+#proyectos-div{
+
+  grid-area:d
+}
+.app-icon{
+  display: block;
+  margin: 10px 10px 20px 0px;
+}
 #coleccion-table-div{
-  grid-area: d;
+  grid-area: e;
 }
 #side-div{
   grid-area: b;
