--- a/Proyecto 2/plantilla/scss/style.css
+++ b/Proyecto 2/plantilla/scss/style.css
@@ -1,4 +1,14 @@
+#max-24h-tag{
+    text-align: right;
+}
+#min-24h-tag{
+    text-align: left;
+}
 
+option{
+    font-family: 'Poppins', sans-serif;
+    font-size: medium;
+}
 
 
 
