--- a/Proyecto 3/PasswordManager/src/app/main-view/main-view.component.html
+++ b/Proyecto 3/PasswordManager/src/app/main-view/main-view.component.html
@@ -7,7 +7,7 @@
         <span class="example-spacer"></span>
         
         <button mat-icon-button class="example-icon" matTooltip="Cerrar Sesión" aria-label="Example icon-button with share icon">
-            <mat-icon>logout</mat-icon>
+            <mat-icon (click)="onLogOut()">logout</mat-icon>
         </button>
     </mat-toolbar>
 
