Se ha implementado la autenticaci'on de usuarios mediantes cookies en express

--- a/Proyecto 3/PasswordManager/src/app/main-view/main-view.component.html
+++ b/Proyecto 3/PasswordManager/src/app/main-view/main-view.component.html
@@ -22,21 +22,21 @@
                                     <span class="nav-link-span">Mi cuenta</span>
                                 </button>
                             </li>
-                            <mat-divider></mat-divider>
+                          <!--mat-divider></mat-divider!-->
                             <li class="nav-item">
                               <button class="nav-link active" (click)="displayLlavero(true)" (click)="sidenav.toggle()">
                                 <mat-icon class="nav-link-icon">key</mat-icon>
                                 <span class="nav-link-span">Llavero</span>
                               </button>
                             </li>
-                            <mat-divider></mat-divider>
+                            <!--mat-divider></mat-divider!-->
                             <li class="nav-item">
                                 <button class="nav-link" (click)="displayConfig(true)" (click)="sidenav.toggle()">
                                   <mat-icon class="nav-link-icon">settings</mat-icon>
                                   <span clas="nav-link-span">Configuración</span>
                                 </button>
                             </li>
-                            <mat-divider></mat-divider>
+                            <!--mat-divider></mat-divider!-->
                             <li class="nav-item">
                                 <button class="nav-link" href="#">
                                     <mat-icon class="nav-link-icon">data_object</mat-icon>
